--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -61,7 +61,7 @@
 <div class="container my-4">
   <div class="card" style="height: calc(100vh - 150px);">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <%= link_to 'Back to chats', "#", class: 'btn btn-outline-primary me-auto', id: 'back-button', onclick: "event.preventDefault(); history.back();" %>
+      <%= link_to 'Back', request.referer, class: 'btn btn-outline-primary me-auto' %>
 
       <div class="d-flex flex-grow-1 justify-content-center align-items-center">
         <% if current_user == @chat.receiver %>
