implemented visitors functionality, added routes for admin pages, implemented visitors for admin dashboard, added visitor link to navbar, user dashboard

--- a/app/views/dashboard/dashboard.html.erb
+++ b/app/views/dashboard/dashboard.html.erb
@@ -46,7 +46,9 @@
           <a href="/favorites" style="text-align: right;">details</a>
         </span>
         <hr>
-        <h6><i class="fa-solid fa-eye" style="color: darkgreen"></i> Visitors - N/A </h6>
+        <span style="display: flex; justify-content: space-between;"><h6><i class="fa-solid fa-eye" style="color: darkgreen"></i> Visitors - <%= @visitors_count %> </h6>
+          <a href="/visits" style="text-align: right;">details</a>
+        </span>
       </div>
     </div>
 
