--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -35,6 +35,11 @@
             <i class="fa-solid fa-thumbs-down"></i>&nbsp;Blocked
           <% end %>
         </li>
+        <li class="nav-item">
+          <%= link_to "/visits", class: "nav-link", aria: { current: "page" } do %>
+            <i class="fa-solid fa-eye"></i>&nbsp;Visitors
+          <% end %>
+        </li>
       </ul>
 
       <ul class="navbar-nav">
