--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -10,70 +10,45 @@
 
 </script>
 
-<% if current_user == @chat.sender %>
-  <% provide(:title, "Chat with #{@chat.receiver.name.capitalize}") %>
-<% else %>
-  <% provide(:title, "Chat with #{@chat.sender.name.capitalize}") %>
-<% end %>
+<% chat_partner = current_user == @chat.sender ? @chat.receiver : @chat.sender %>
+<% provide(:title, "Chat with #{chat_partner.name.capitalize}") %>
 
 <div class="container my-4">
   <div class="card" style="height: calc(100vh - 150px);">
     <div class="card-header d-flex justify-content-between align-items-center">
-      <%= link_to 'Back', "/chats", class: 'btn btn-outline-primary me-auto' %>
-
+      <%= link_to 'Back', chats_path, class: 'btn btn-outline-primary me-auto' %>
       <div class="d-flex flex-grow-1 justify-content-center align-items-center">
-        <% if current_user == @chat.receiver %>
-          <div class="profile-container">
-            <%= link_to image_tag(@chat.sender.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.sender.id}" %>&nbsp;
-            <% if @chat.sender.online? %>
-              <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #3ef308;"></i>
-            <% end %>
-          </div>
-          <h4 class="mb-0"><%= "Chat with #{@chat.sender.name.capitalize}" %></h4>
-        <% else %>
-          <div class="profile-container">
-            <%= link_to image_tag(@chat.receiver.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{@chat.receiver.id}" %>&nbsp;
-            <% if @chat.receiver.online? %>
-              <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #3ef308;"></i>
-            <% end %>
-          </div>
-          <h4 class="mb-0"><%= "Chat with #{@chat.receiver.name.capitalize}" %></h4>
-        <% end %>
+        <div class="profile-container">
+          <%= link_to image_tag(chat_partner.avatar.url, class: 'rounded-circle avatar-image'), profile_path(chat_partner) %>
+          <% if chat_partner.online? %>
+            <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #3ef308;"></i>
+          <% end %>
+        </div>
+        <h4 class="mb-0">&nbsp;Chat with <%= chat_partner.name.capitalize %></h4>
       </div>
     </div>
     <div class="card-body" style="overflow-y: auto; height: calc(100vh - 150px);">
       <ul class="list-unstyled" id="messages">
         <% @messages.each do |message| %>
-          <li id="message_<%= message.id %>" class="px-2" style="margin-bottom: 5px;">
+          <li id="message_<%= message.id %>" class="message-item">
             <div class="d-flex align-items-start">
-              <!-- Avatar with original size -->
-              <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{message.author.id}" %>
-
-              <!-- Message Content with Delete Button aligned to first line -->
-              <div class="flex-grow-1 ms-2" style="width: calc(100% - 50px);"> <!-- Adjust width as necessary -->
-                <!-- Message Box -->
-                <div>
-                  <!-- Username with comma, Date and Time in AM/PM format -->
-                  <div class="mb-1">
-                    <%= link_to message.author.name.capitalize, "/profiles/#{message.author.id}", class: '', style: 'font-size: 1.2em; color: cornflowerblue; text-decoration: none;' %>
-                    <span class="text-muted" style="font-size: 0.75em;"><%= message.created_at.in_time_zone('Central Time (US & Canada)').strftime("%-d %b %Y, %l:%M %p") %></span>
+              <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle avatar-image'), profile_path(message.author) %>
+              <div class="message-content-container">
+                <div class="message-metadata">
+                  <%= link_to message.author.name.capitalize, profile_path(message.author), class: 'message-author' %>
+                  <span class="message-timestamp"><%= message.created_at.in_time_zone('Central Time (US & Canada)').strftime("%-d %b %Y, %l:%M %p") %></span>
+                </div>
+                <div class="message-body">
+                  <div class="message-text">
+                    <%= simple_format(message.content, {}, wrapper_tag: "div") %>
                   </div>
-                  <!-- Message Content and Delete Button on the same line -->
-                  <div class="d-flex align-items-center">
-                    <div class="rounded px-2 py-1" style="background-color: white; word-wrap: break-word; flex-grow: 1;">
-                      <p class="mb-0" style="word-break: break-word;"><%= message.content %></p>
+                  <% if message.author == current_user %>
+                    <div class="message-delete">
+                      <%= link_to message_path(message), method: :delete, data: { confirm: 'Are you sure?', turbo_method: :delete }, title: 'Delete Message', class: "icon-link" do %>
+                        <i class="fa-regular fa-trash-can"></i>
+                      <% end %>
                     </div>
-                    <% if message.author_id == current_user.id %>
-                      <div class="ms-2"> <!-- Margin from the message body -->
-                        <%= link_to message_path(message),
-                                    method: :delete,
-                                    data: { turbo_method: :delete },
-                                    title: 'Delete Message', class: "icon-link" do %>
-                          <i class="fa-regular fa-trash-can" style="color: #f80303;"></i>
-                        <% end %>
-                      </div>
-                    <% end %>
-                  </div>
+                  <% end %>
                 </div>
               </div>
             </div>
@@ -88,6 +63,7 @@
     </div>
   </div>
 </div>
+
 
 <script>
     function scrollToBottom() {
@@ -119,27 +95,37 @@
         observer.disconnect();
     }
 
-
     document.addEventListener('turbo:load', function () {
         var textarea = document.querySelector('.chat-textarea');
 
         function resizeTextarea() {
-            textarea.style.height = '0'; // Reset the height
+            textarea.style.height = 'auto'; // Auto adjust the height
             textarea.style.height = textarea.scrollHeight + 'px'; // Set new height
         }
 
         if (textarea) {
-            textarea.addEventListener('input', resizeTextarea);
+            textarea.addEventListener('keydown', function(event) {
+                if (event.key === 'Enter' && !event.shiftKey) {
+                    // When ENTER is pressed without SHIFT
+                    event.preventDefault(); // Prevent default to avoid new line
+                    if (textarea.value.trim() !== '') {
+                        // Trigger the form submission
+                        document.getElementById('new_message_form').requestSubmit();
+                    }
+                } else if (event.key === 'Enter' && event.shiftKey) {
+                    // When SHIFT + ENTER is pressed
+                    // Let the default action happen, which adds a new line
+                    setTimeout(resizeTextarea, 0); // Resize after the new line is added
+                }
+            });
             resizeTextarea(); // Adjust for initial content
         }
 
         var messageForm = document.getElementById('new_message_form');
         if (messageForm) {
             messageForm.addEventListener('submit', function () {
-                // Resize the textarea right before the form is submitted
-                resizeTextarea();
-
-                // Note: No event.preventDefault(), allow the form to submit
+                resizeTextarea(); // Resize the textarea right before the form is submitted
+                // Additional handling for Turbo can be added here if needed
             });
 
             // Listen for turbo stream submit-end event
