--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,33 +1,27 @@
-<li id="message_<%= message.id %>" class="px-2" style="margin-bottom: 5px;">
+<li id="message_<%= message.id %>" class="message-item">
   <div class="d-flex align-items-start">
-    <!-- Avatar with original size -->
-    <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle', width: 40, height: 40), "/profiles/#{message.author.id}" %>
+    <%= link_to image_tag(message.author.avatar.url, class: 'rounded-circle avatar-image'), "/profiles/#{message.author.id}" %>
 
-    <!-- Message Content with Delete Button aligned to first line -->
-    <div class="flex-grow-1 ms-2" style="width: calc(100% - 50px);"> <!-- Adjust width as necessary -->
-      <!-- Message Box -->
-      <div>
-        <!-- Username with comma, Date and Time in AM/PM format -->
-        <div class="mb-1">
-          <%= link_to message.author.name.capitalize, "/profiles/#{message.author.id}", class: '', style: 'font-size: 1.2em; color: cornflowerblue; text-decoration: none;' %>
-          <span class="text-muted" style="font-size: 0.75em;"><%= message.created_at.in_time_zone('Central Time (US & Canada)').strftime("%-d %b %Y, %l:%M %p") %></span>
+    <div class="message-content-container">
+      <div class="message-metadata">
+        <%= link_to message.author.name.capitalize, "/profiles/#{message.author.id}", class: 'message-author' %>
+        <span class="text-muted message-timestamp"><%= message.created_at.in_time_zone('Central Time (US & Canada)').strftime("%-d %b %Y, %l:%M %p") %></span>
+      </div>
+
+      <div class="message-body">
+        <div class="message-text">
+          <%= simple_format(message.content, {}, wrapper_tag: "div") %>
         </div>
-        <!-- Message Content and Delete Button on the same line -->
-        <div class="d-flex align-items-center">
-          <div class="rounded px-2 py-1" style="background-color: white; word-wrap: break-word; flex-grow: 1;">
-            <p class="mb-0" style="word-break: break-word;"><%= message.content %></p>
+        <% if message.author_id == current_user.id %>
+          <div class="message-delete">
+            <%= link_to message_path(message),
+                        method: :delete,
+                        data: { turbo_method: :delete },
+                        title: 'Delete Message', class: "icon-link" do %>
+              <i class="fa-regular fa-trash-can"></i>
+            <% end %>
           </div>
-          <% if message.author_id == current_user.id %>
-            <div class="ms-2"> <!-- Margin from the message body -->
-              <%= link_to message_path(message),
-                          method: :delete,
-                          data: { turbo_method: :delete },
-                          title: 'Delete Message', class: "icon-link" do %>
-                <i class="fa-regular fa-trash-can" style="color: #f80303;"></i>
-              <% end %>
-            </div>
-          <% end %>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
