--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -15,7 +15,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-        <%= render partial: "profiles/search_form" %>
+          <%= render partial: "profiles/search_form" %>
 
         </div>
       </div>
@@ -25,79 +25,81 @@
   <!-- Search modal end -->
 
   <% if @profiles.any? %>
-  <% @profiles.each do |profile| %>
-    <div class="card mb-3 mx-auto p-2" style="max-width: 540px;">
-      <div class="row g-0 m-1">
-        <div class="col-md-3">
-          <%= link_to "profiles/#{profile.id}" do %>
-            <img src="<%= profile.avatar %>" alt="<%= profile.name.capitalize %>'s photo" class="img-fluid rounded-start rounded-end" style="max-width: 100%;">
+    <% @profiles.each do |profile| %>
+      <div class="card mb-3 mx-auto p-2" style="max-width: 540px;">
+        <div class="row g-0 m-1">
+          <div class="col-md-3">
+            <%= link_to "profiles/#{profile.id}" do %>
+              <img src="<%= profile.avatar %>" alt="<%= profile.name.capitalize %>'s photo" class="img-fluid rounded-start rounded-end" style="max-width: 100%;">
 
-        <% end %>
-
-        </div>
-        <div class="col-md-8">
-          <div class="card-body m-3 text-center">
-            <h5 class="card-title"><%= profile.name.capitalize %>, <%= profile.age %></h5>
-            <% if profile.email == "flstudio444@gmail.com" %>
-              <h5 style="font-family: Tahoma, serif; color: rgb(231,83,83); font-weight: bolder; text-shadow: black 1px 1px">Admin</h5>
             <% end %>
-            <p class="card-text">
-              <%= profile.country %>, <%= profile.state %>, <%= profile.city %>
-            </p>
 
-            <div class="dropdown drop-top">
-              <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Options
-              </a>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body m-3 text-center">
+              <h5 class="card-title"><%= profile.name.capitalize %>, <%= profile.age %></h5>
+              <% if profile.email == "flstudio444@gmail.com" %>
+                <h5 style="font-family: Tahoma, serif; color: rgb(231,83,83); font-weight: bolder; text-shadow: black 1px 1px">Admin</h5>
+              <% end %>
+              <p class="card-text">
+                <%= profile.country %>, <%= profile.state %>, <%= profile.city %>
+              </p>
 
-              <ul class="dropdown-menu" style="background-color: gainsboro" aria-labelledby="dropdownMenuLink">
-                <li>
-                  <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick
-                    preview</a></li>
-                <li>
-                  <a class="dropdown-item" href="<%= send_message_path(profile.id) %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send a message</a>
-                </li>
-                <li>
-                  <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See full profile</a></li>
-              </ul>
-            </div>
+              <div class="dropdown drop-top">
+                <a class="btn btn-secondary btn-sm dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                  Options
+                </a>
+
+                <ul class="dropdown-menu" style="background-color: gainsboro" aria-labelledby="dropdownMenuLink">
+                  <li>
+                    <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#<%= profile.id %>"><i class="fa-solid fa-eye" style="color: #585555;"></i>&nbsp;Quick
+                      preview</a></li>
+                  <li>
+                    <a class="dropdown-item" href="<%= send_message_path(profile.id) %>"><i class="fa-regular fa-comment" style="color: #585555;"></i>&nbsp;Send
+                      a message</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="profiles/<%= profile.id %>"><i class="fa-regular fa-address-card" style="color: #585555;"></i>&nbsp;See
+                      full profile</a></li>
+                </ul>
+              </div>
 
 
-            <!-- Modal for quick preview -->
+              <!-- Modal for quick preview -->
 
-            <div class="modal fade" id="<%= profile.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-1" id="exampleModalLabel"><%= profile.name.capitalize %></h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    <%= image_tag("#{profile.avatar}", alt: "#{profile.name.capitalize}'s photo", class: "img-fluid rounded-start rounded-end mx-auto") %>
-                    <div class="container border p-2 mt-3">
-                      <%= profile.bio %>
+              <div class="modal fade" id="<%= profile.id %>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h1 class="modal-title fs-1" id="exampleModalLabel"><%= profile.name.capitalize %></h1>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                  </div>
-                  <div class="modal-footer justify-content-md-center">
+                    <div class="modal-body">
+                      <%= image_tag("#{profile.avatar}", alt: "#{profile.name.capitalize}'s photo", class: "img-fluid rounded-start rounded-end mx-auto") %>
+                      <div class="container border p-2 mt-3">
+                        <%= profile.bio %>
+                      </div>
+                    </div>
+                    <div class="modal-footer justify-content-md-center">
 
-                    <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal">Close</button>
 
+                    </div>
                   </div>
                 </div>
               </div>
+
+              <!-- Modal for quick preview end -->
+
             </div>
-
-            <!-- Modal for quick preview end -->
-
           </div>
         </div>
       </div>
-    </div>
 
-  <% end %>
-    <% else %>
-  <h2>No results on your search, please change the parameters</h2>
     <% end %>
+  <% else %>
+    <h2>No results on your search, please change the parameters</h2>
+  <% end %>
 
   <%= will_paginate @profiles %>
 </div>
