--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -9,13 +9,13 @@
   <p>Welcome to Singles, your ultimate destination for meaningful connections in the digital age. Our platform is
     dedicated to helping individuals discover love, friendship, and companionship through a secure and user-friendly
     environment.</p>
-    
-    <h2>Join the Singles Community Today</h2>
+
+  <h2>Join the Singles Community Today</h2>
 </article>
 
 <div id="buttons">
   <%= link_to "Sign In", new_user_session_path, class: "btn btn-outline-success btn-lg", id: "landing1", role: "button", "aria-pressed" => "true" %>&nbsp;
-  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-secondary btn-lg", id: "landing2",role: "button", "aria-pressed" => "true" %>
+  <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-outline-secondary btn-lg", id: "landing2", role: "button", "aria-pressed" => "true" %>
 
 </div>
 <article>
@@ -25,9 +25,8 @@
 
     Thank you for choosing Singles. We're here to make your dating experience exceptional.
 
-    Questions or feedback? Feel free to reach out to our team.
+    Questions or feedback? Feel free to reach out to our team. Email: admin@where.singles
   </p>
 
-  
 </article>
   
