Changed font for Singles on landing page and navbar

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Welcome") %>
 
 <article>
-  <h1>
+  <h1 id="singles">
     <i class="fa-solid fa-heart fa-beat" style="color: #f71302;"></i>&nbsp;Singles&nbsp;<i class="fa-solid fa-heart fa-beat" style="color: #f71302;"></i>
   </h1>
   <h2>Connecting Hearts, One Click at a Time</h2>
