--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,14 @@ h1 {
     text-shadow: #333333 2px 2px;
 }
 
+h1#singles {
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 3.5em;
+    font-weight: bolder;
+    color: white;
+    text-shadow: deeppink 1px 1px 2px, blue -2px -2px 15px, black 2px 2px 1px;
+}
+
 article {
     font-family: 'Indie Flower', cursive;
     padding: 25px;
