--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -31,6 +31,14 @@ h5 {
     font-family: 'Indie Flower', cursive;
 }
 
+a#singles_link {
+    font-family: 'Amatic SC', sans-serif;
+    font-size: 1.5em;
+    font-weight: bolder;
+    color: white;
+    text-shadow: deeppink 1px 1px 2px, blue -2px -2px 15px, black 2px 2px 1px;
+}
+
 /* Styling the pagination container */
 .pagination {
     display: flex;
