--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
   <div class="container">
     <i class="fa-solid fa-heart fa-beat" style="color: #f21f07;"></i>&nbsp;
-    <%= link_to "Singles", root_path, class: "navbar-brand", aria: { current: "page" } %>
+    <%= link_to "Singles", root_path, id: "singles_link", class: "navbar-brand", aria: { current: "page" } %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
