--- a/app/views/admin/admin_panel.html.erb
+++ b/app/views/admin/admin_panel.html.erb
@@ -1,9 +1,10 @@
 <% provide(:title, "Admin") %>
 
 <div class="container mt-4">
+  <h1 class="text-center">Users</h1>
   <% @users.each do |user| %>
     <div class="row mb-2" id="<%= dom_id(user) %>">
-      <div class="col-12 mx-auto">
+      <div class="col-10 mx-auto">
         <div class="card">
           <div class="card-body d-flex align-items-center">
             <div class="profile-container">
@@ -17,13 +18,13 @@
               <% end %>
               <div class="ms-auto">
                 <%= link_to send_message_to_profile_path(user), class: "btn btn-outline-primary btn-sm" do %>
-                  <i class="fa-solid fa-message"></i> Message
+                  <i class="fa-solid fa-message"></i>
                 <% end %>
                 <%= link_to profile_path(user), class: "btn btn-outline-secondary btn-sm" do %>
-                  <i class="fa-solid fa-user"></i> Profile
+                  <i class="fa-solid fa-user"></i>
                 <% end %>
                 <%= link_to user_full_info_path(user), class: "btn btn-outline-success btn-sm" do %>
-                  <i class="fa-regular fa-address-card"></i> Info
+                  <i class="fa-regular fa-address-card"></i>
                 <% end %>
 
               </div>
