--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container mt-4">
   <% @favorites.each do |favorite| %>
     <div class="row mb-2" id="<%= dom_id(favorite) %>">
-      <div class="col-8 mx-auto">
+      <div class="col-10 mx-auto">
         <div class="card">
           <div class="card-body d-flex align-items-center">
             <%= link_to profile_path(favorite.liked_user), class: "text-decoration-none" do %>
@@ -13,13 +13,13 @@
             <% end %>
             <div class="ms-auto">
               <%= link_to send_message_to_profile_path(favorite.liked_user.id), class: "btn btn-outline-primary btn-sm" do %>
-                <i class="fa-solid fa-message"></i> Message
+                <i class="fa-solid fa-message"></i>
               <% end %>
               <%= link_to profile_path(favorite.liked_user), class: "btn btn-outline-secondary btn-sm" do %>
-                <i class="fa-solid fa-user"></i> Profile
+                <i class="fa-solid fa-user"></i>
               <% end %>
               <%= link_to favorite_path(favorite), method: :delete, data: { turbo_method: :delete }, class: "btn btn-outline-danger btn-sm" do %>
-                <i class="fa-solid fa-heart-crack"></i> Unlike
+                <i class="fa-solid fa-heart-crack"></i>
               <% end %>
 
             </div>
