added meta tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,12 +3,12 @@
 <head>
   <title><%= full_title(yield(:title)) %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta property="og:image" content="meta_img.png">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   <%= favicon_link_tag '/favicon.ico' %>
 
   <%= render partial: "shared/cdn_assets" %>
+  <%= render partial: "shared/meta" %>
 
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <link rel="preconnect" href="https://fonts.googleapis.com">
