Added seo optimization

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -6,9 +6,10 @@
   </h1>
   <h2>Connecting Hearts, One Click at a Time</h2>
 
-  <p>Welcome to Singles, your ultimate destination for meaningful connections in the digital age. Our platform is
-    dedicated to helping individuals discover love, friendship, and companionship through a secure and user-friendly
-    environment.</p>
+  <p>Welcome to Singles, the premier online dating platform for meaningful connections in the digital age. Our platform
+    is dedicated to helping individuals discover love, friendship, and lasting romantic connections in a secure and
+    user-friendly environment. Find your perfect match and explore genuine relationships with ease.
+  </p>
 
   <h2>Join the Singles Community Today</h2>
 </article>
