--- a/app/views/blocks/index.html.erb
+++ b/app/views/blocks/index.html.erb
@@ -8,6 +8,7 @@
         <div class="card">
           <div class="card-body d-flex align-items-center">
             <%= link_to profile_path(user.blocked), class: "text-decoration-none" do %>
+            <%# inline styling %>
               <img src="<%= user.blocked.avatar %>" class="rounded-circle me-2" style="width: 50px; height: 50px;" alt="User Avatar">
               <span><%= user.blocked.name.capitalize %></span>
             <% end %>
