--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -22,7 +22,7 @@
                       <i class="fa-solid fa-circle fa-beat-fade status-icon" style="color: #3ef308;"></i>
                     <% end %>
                   <% else %>
-                    <img src="default_avatar.jpg" class="rounded-circle" width="50" height="50">
+                    <img src="default_avatar.jpg" class="rounded-circle" width="50" height="50" alt="default_avatar">
                   <% end %>
                 </div>
                 <div class="ms-3 d-flex flex-column">
